--- a/pom.xml
+++ b/pom.xml
@@ -5,11 +5,15 @@
 
 	<groupId>edu.ucsf.ckm.mesh_parser</groupId>
 	<artifactId>mesh_parser</artifactId>
-	<version>1.0.0-SNAPSHOT</version>
+	<version>1.1.0</version>
 	<packaging>jar</packaging>
 
 	<name>MeSH Parser</name>
 	<url>https://github.com/ucsf-ckm/mesh-parser</url>
+
+	<properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
 
 	<dependencies>
 		<dependency>
@@ -59,7 +63,7 @@
 					</execution>
 				</executions>
 			</plugin>
-			
+
 		</plugins>
 	</build>
 </project>
