--- a/composer.json
+++ b/composer.json
@@ -19,8 +19,9 @@
     "php": ">=5.5.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "~4.7.0",
-    "squizlabs/php_codesniffer": "^2.5"
+    "mockery/mockery": "@stable",
+    "phpunit/phpunit": "4.8.*",
+    "squizlabs/php_codesniffer": "2.*"
   },
   "autoload": {
     "psr-4": {
