autoload tests dir for dev.

--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,11 @@
       "": "src/"
     }
   },
+  "autoload-dev": {
+    "psr-4": {
+      "": "tests/"
+    }
+  },
   "config": {
     "bin-dir": "bin"
   }
