--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
   "require-dev": {
     "mockery/mockery": "@stable",
     "phpunit/phpunit": "4.8.*",
-    "squizlabs/php_codesniffer": "2.*"
+    "squizlabs/php_codesniffer": "2.*",
+    "fzaninotto/faker": "^1.5"
   },
   "autoload": {
     "psr-4": {
