--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,16 @@
 language: php
 sudo: false
 php:
-  - "5.5"
-  - "5.6"
-  - "7.0"
+- '5.5'
+- '5.6'
+- '7.0'
 cache:
   directories:
-    - $HOME/.composer/cache
+  - "$HOME/.composer/cache"
 install:
-  - composer install --no-interaction --prefer-dist -d ${TRAVIS_BUILD_DIR}
+- composer install --no-interaction --prefer-dist -d ${TRAVIS_BUILD_DIR}
 script:
-  - bin/phpcs --standard=PSR2 src
+- bin/phpcs --standard=PSR2 src
+notifications:
+  slack:
+    secure: Wo55oNtFKWzyN3+pOYSNRW9iEf3wXYgEAuOrnsmZKYrI6UHH5Ebh43F/uBRj8GaqmWaTKhwVGCj3Tb1ID3ChYsJm6sOYtj/kPkpc31tu6f/JmRXZ7wtWLNH+ZiQJVGkEKT1wWSF8H17rsWHiWl23J3YzQoHR4kixx4TUT5k60mA=
