--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ install:
 - composer install --no-interaction --prefer-dist -d ${TRAVIS_BUILD_DIR}
 script:
 - bin/phpcs --standard=PSR2 src
+- bin/phpcs --standard=PSR2 tests
 - bin/phpunit tests
 notifications:
   slack:
