Update to latest stable PHP
This requires updating our dependencies for testing as well since they're not compatible with this version of PHP.

| Dev Changes                        | From    | To      | Compare                                                                                    |
|------------------------------------|---------|---------|--------------------------------------------------------------------------------------------|
| doctrine/instantiator              | 1.1.0   | 1.4.0   | [...](https://github.com/doctrine/instantiator/compare/1.1.0...1.4.0)                      |
| fzaninotto/faker                   | v1.8.0  | REMOVED |                                                                                            |
| hamcrest/hamcrest-php              | v2.0.0  | v2.0.1  | [...](https://github.com/hamcrest/hamcrest-php/compare/v2.0.0...v2.0.1)                    |
| mockery/mockery                    | 1.2.0   | 1.4.3   | [...](https://github.com/mockery/mockery/compare/1.2.0...1.4.3)                            |
| myclabs/deep-copy                  | 1.8.1   | 1.10.2  | [...](https://github.com/myclabs/DeepCopy/compare/1.8.1...1.10.2)                          |
| phar-io/manifest                   | 1.0.1   | 2.0.1   | [...](https://github.com/phar-io/manifest/compare/1.0.1...2.0.1)                           |
| phar-io/version                    | 1.0.1   | 3.1.0   | [...](https://github.com/phar-io/version/compare/1.0.1...3.1.0)                            |
| phpdocumentor/reflection-common    | 1.0.1   | 2.2.0   | [...](https://github.com/phpDocumentor/ReflectionCommon/compare/1.0.1...2.2.0)             |
| phpdocumentor/reflection-docblock  | 4.3.0   | 5.2.2   | [...](https://github.com/phpDocumentor/ReflectionDocBlock/compare/4.3.0...5.2.2)           |
| phpdocumentor/type-resolver        | 0.4.0   | 1.4.0   | [...](https://github.com/phpDocumentor/TypeResolver/compare/0.4.0...1.4.0)                 |
| phpspec/prophecy              

--- a/composer.json
+++ b/composer.json
@@ -16,13 +16,13 @@
     }
   ],
   "require": {
-    "php": "~7.1|~7.2"
+    "php": ">=7.3"
   },
   "require-dev": {
     "mockery/mockery": "@stable",
-    "phpunit/phpunit": "6.*",
+    "phpunit/phpunit": "@stable",
     "squizlabs/php_codesniffer": "@stable",
-    "fzaninotto/faker": "^1.5"
+    "fakerphp/faker": "@stable"
   },
   "autoload": {
     "psr-4": {
