--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -9,8 +9,7 @@
         convertNoticesToExceptions  = "true"
         convertWarningsToExceptions = "true"
         processIsolation            = "false"
-        stopOnFailure               = "false"
-        syntaxCheck                 = "false">
+        stopOnFailure               = "false">
 
     <testsuites>
         <testsuite name="Ilios MeSH Parser tests">
