--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "Ilios",
     "MeSH"
   ],
-  "homepage": "http://iliosproject.org/",
+  "homepage": "https://iliosproject.org/",
   "license": "MIT",
   "authors": [
     {
