--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
     }
   ],
   "require": {
-    "php": ">=8.2"
+    "php": ">=8.2",
+    "ext-xmlreader": "*"
   },
   "require-dev": {
     "mockery/mockery": "@stable",
