dial in PHPCS config and streamline linting step in the CI.
exclude the vendor dir.
in the CI, lint all configured dirs in one step.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,10 +26,8 @@ jobs:
         php-version: ${{ matrix.php-version }}
     - name: install dependencies
       run: composer install --no-interaction --prefer-dist
-    - name: lint src
-      run: bin/phpcs src
-    - name: lint tests
-      run: bin/phpcs tests
+    - name: lint PHP
+      run: bin/phpcs
 
   tests:
     name: PHPUnit Tests
