--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -3,14 +3,16 @@ updates:
   - package-ecosystem: composer
     directory: "/"
     schedule:
-      interval: daily
+      interval: weekly
+      day: "sunday"
       time: "02:30"
       timezone: America/Los_Angeles
     open-pull-requests-limit: 10
   - package-ecosystem: github-actions
     directory: "/"
     schedule:
-      interval: daily
+      interval: weekly
+      day: "sunday"
       time: "02:30"
       timezone: America/Los_Angeles
     open-pull-requests-limit: 10
